--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@
     height: 100vh;
 }
 
-.navbar{
-    width: 1200px;
-    height: 75px;
-    margin: auto;
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
 }
 
 .icon{
@@ -39,18 +40,15 @@
     height: 70px;
 }
 
-ul{
-    float: left;
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
+.menu ul li {
+    margin-left:30px
 }
 
 ul li a{
@@ -63,28 +61,6 @@ ul li a{
 
 ul li a:hover{
     color: #ff7200;
-}
-
-.search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-}
-
-.srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
 }
 
 .btn{
@@ -115,10 +91,18 @@ ul li a:hover{
 .content{
     width: 1200px;
     height: auto;
-    margin: auto;
+    margin-left: 40px;
     color: #fff;
     position: relative;
 }
+
+.content-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+}
+
 
 .content .par{
     padding-left: 20px;
@@ -126,7 +110,9 @@ ul li a:hover{
     font-family: Arial;
     letter-spacing: 1.2px;
     line-height: 30px;
+    text-align: left;
 }
+
 
 .content h1{
     font-family: 'Times New Roman';
@@ -175,6 +161,7 @@ ul li a:hover{
     transform: translate(0%,-5%);
     border-radius: 10px;
     padding: 25px;
+
 }
 
 .form h2{
@@ -262,4 +249,18 @@ ul li a:hover{
 }
 .icons ion-icon:hover{
     color: #ff7200;
+}
+
+#footer {
+    background: #222;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+#footer a {
+    color: #ff7200;
+    text-decoration: none;
 }
