--- a/signup.css
+++ b/signup.css
@@ -93,3 +93,16 @@ body, html {
     color: #ff7200;
     text-decoration: none;
 }
+#footer {
+    background: #222;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+#footer a {
+    color: #ff7200;
+    text-decoration: none;
+}
