Removed testomonials and edited the footer

--- a/page2.css
+++ b/page2.css
@@ -211,51 +211,21 @@ nav a {
 	color: red;
 	font-weight: 400;
 }
-/****************TESTIMONIAL SECTION****************/
-.testimonial {
-	width: 30.5%;
-	float: left;
-	margin-right: 2.5%;
-}
 
-.testimonial-text {
-	background: #0055a40f;
-	padding: 20px;
-	line-height: 35px;
-	border-radius: 10px;
-	font-size: 18px;
-	text-align: center;
-	border: 1px solid #0055a4;
-}
 
-.testimonial-detail {
-	float: left;
-	margin-top: 10px;
-}
 
-.testimonial-img {
-	float: left;
-}
-
-.testimonial-name {
-	margin-left: 10px;
-	float: left;
-}
-
-.testimonial-name h5 {
-	font-size: 18px;
-	margin-top: 8px;
-}
 /****************FOOTER SECTION****************/
 #footer {
     background: #222;
     color: #fff;
     text-align: center;
     padding: 20px 0;
-    position:fixed;
-    bottom:1px;
+    position: relative;
+    bottom: 0;
     width: 100%;
+    clear: both;
 }
+
 #footer a {
     color: #ff7200;
     text-decoration: none;
