--- a/student.css
+++ b/student.css
@@ -79,7 +79,7 @@ nav a:hover {
 	width: 92%;
 	margin-left: 1%;
 	float: center;
-	background-color: #57abce;
+	background-color: #1ccdf1;
 	height: 530px;
 	
 }
@@ -114,7 +114,7 @@ nav a:hover {
 	width: 32%;
 	margin-right: 1%;
 	float: left;
-	background-color: #fff;
+	background-color: #1ccdf1;
 }
 
 .event i {
