--- a/ChangePassword.css
+++ b/ChangePassword.css
@@ -84,3 +84,17 @@ input:-webkit-autofill {
     text-align: center;
     color: red;
 }
+
+#footer {
+    background: #222;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+#footer a {
+    color: #ff7200;
+    text-decoration: none;
+}
