--- a/ChangePassword.css
+++ b/ChangePassword.css
@@ -4,15 +4,76 @@
     box-sizing: border-box;
 }
 
-body {
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.5) 50%),
-        url("reg.jpg");
-    background-size: cover;
-    background-position: center;
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
+}
+
+.icon{
+    width: 200px;
+    float: left;
+    height: 70px;
+}
+
+.logo{
+    color: #fff;
+    font-size: 35px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
+    margin-top: 5px
+}
+
+.menu{
+    width: 400px;
+    float: left;
+    height: 70px;
+}
+
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.menu ul li {
+    margin-left:30px
+
+}
+
+ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.4s ease-in-out;
+}
+
+ul li a:hover{
+    color: #ff7200;
+}
+
+body {
+    min-height: 100vh;
+    background: linear-gradient(to top, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%),
+                url("usj_cover-1557335254.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .change-password-container {
@@ -24,6 +85,9 @@ body {
     width: 500px;
     height: 450px;
     border: 2px solid gray;
+    position: absolute;
+    top: 120px;    
+    right: 400px;   
 }
 
 .change-password-container h2 {
@@ -90,10 +154,13 @@ input:-webkit-autofill {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: relative;
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
+    z-index: 100;
 }
+
 #footer a {
     color: #ff7200;
     text-decoration: none;
