--- a/st_info.css
+++ b/st_info.css
@@ -3,13 +3,72 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    height: 100vh;
+body, html {
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
+}
+
+.icon{
+    width: 200px;
+    float: left;
+    height: 70px;
+}
+
+.logo{
+    color: #fff;
+    font-size: 35px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 20px;
+    float: left;
+    padding-top: 10px;
+    margin-top: 5px
+}
+
+.menu{
+    width: 400px;
+    float: left;
+    height: 70px;
+}
+
+.menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.menu ul li {
+    margin-left:30px
+
+}
+
+ul li a{
+    text-decoration: none;
+    color: #fff;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.4s ease-in-out;
+}
+
+ul li a:hover{
+    color: #ff7200;
+}
+
+body {
+    min-height: 100vh;
     background: linear-gradient(to top, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%),
-                url("reg.jpg");
+                url("usj_cover-1557335254.jpg");
     background-position: center;
     background-size: cover;
-    display: flex;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     justify-content: center;
     align-items: center;
 }
@@ -77,4 +136,19 @@ form button{
 .btn:hover {
     background-color: #fff;
     color: #ff7200;
+}
+
+#footer {
+    background: #222;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+#footer a {
+    color: #ff7200;
+    text-decoration: none;
 }
