--- a/staff_home.css
+++ b/staff_home.css
@@ -57,17 +57,18 @@ nav a {
 
 /**********LOGO SECTION**********/
 .container .logo {
-	height: 65px;
+	height: 70px;
     margin-top: 30px;
     padding-bottom: 10px;
     margin-left: 0px;
+    width:70px;
 }
 
 /**********MENU SECTION**********/
 
 nav {
 	float: right;
-	padding: 25px 0px;
+	padding: 35px 0px;
 }
 
 nav a {
