--- a/profiles.css
+++ b/profiles.css
@@ -18,7 +18,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../usj_cover-1557335254.jpg') no-repeat center center fixed;
+    background: url("usj_cover-1557335254.jpg") no-repeat center center fixed;
     background-size: cover;
 
 }
