--- a/Add Notice.css
+++ b/Add Notice.css
@@ -41,14 +41,11 @@ body {
 }
 
 
-.menu-bar {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-    padding: 10px 40px;
-    justify-content: space-between;
-  }
+.container {
+    position: relative;
+    text-align: left; /* Align content to left */
+    padding: 10px;
+}
   
 .header marquee {
     font-size: 20px;
@@ -57,30 +54,40 @@ body {
 }
   
 
-.menu-bar .logo{
-    height: 65px;
+.logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 70px;
+    width: 70px;
     margin: 0;
+    padding: 0;
 }
 
 /*Menu section*/
 nav {
-    float: right;
-    padding: 25px 0px;
-}
-  
-nav a {
-    color: black;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 2px 10px;
-    font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 32px;
+  padding: 20px 0px;
 }
 
-nav a:hover {
-    background-color: #c0132a;
-    color: white;
-    border-radius: 5px;
+nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 2px 10px;
+  font-weight: 500;
 }
+
+.user-icon {
+  width: 48px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 16px;
+}
+
 
 /*Main selection*/
 .main-section {
@@ -197,12 +204,69 @@ textarea:focus {
 }
 
 #footer p {
-    margin: 0; /* This will remove the default top and bottom margins */
-    padding: 1px 0; /* Optional: Add a small vertical padding if you want a tiny bit of spacing,
-                       but less than default paragraph margins */
+    margin: 0;
+    padding: 1px 0; 
 }
 
 #footer h3 {
-    margin-bottom: 1px; /* Reduce default bottom margin of h3 */
+    margin-bottom: 1px; 
+}
+
+/* Mobile styles (<=768px width) */
+@media (max-width: 768px) {
+
+  /* NAVBAR STACKS */
+  nav {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  /* LOGO CENTERED */
+  .logo {
+    margin: 10px auto;
+    display: block;
+    height: 50px;
+    width: 50px;
+  }
+
+  /* USER ICON */
+  .user-icon {
+    width: 36px;
+    height: 36px;
+  }
+
+  /* MAIN CONTENT PADDING */
+  .main-section,
+  .main {
+    padding: 20px 10px;
+  }
+
+  /* NOTICE CARDS STACKED */
+  .event,
+  .event1 {
+    width: 95%;
+    padding: 15px;
+  }
+
+  .event ul li,
+  .event1 ul li {
+    font-size: 14px;
+    text-align: left;
+  }
+
+  /* BUTTONS ADJUSTED */
+  button,
+  .button1 {
+    padding: 10px 20px;
+    font-size: 0.9em;
+    margin: 5px;
+  }
+
+  /* FOOTER TEXT SMALLER */
+  #footer p {
+    font-size: 14px;
+  }
 }
 
