--- a/ChangePassword.css
+++ b/ChangePassword.css
@@ -11,32 +11,31 @@ body, html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* NAVBAR */
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
+    flex-wrap: wrap;
 }
 
-.icon{
+.icon {
     width: 200px;
-    float: left;
     height: 70px;
 }
 
-.logo{
+.logo {
     color: #fff;
     font-size: 35px;
     font-family: 'Times New Roman', Times, serif;
     padding-left: 20px;
-    float: left;
     padding-top: 10px;
-    margin-top: 5px
+    margin-top: 5px;
 }
 
-.menu{
+.menu {
     width: 400px;
-    float: left;
     height: 70px;
 }
 
@@ -45,14 +44,14 @@ body, html {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .menu ul li {
-    margin-left:30px
-
+    margin-left: 30px;
 }
 
-ul li a{
+ul li a {
     text-decoration: none;
     color: #fff;
     font-family: Arial;
@@ -60,10 +59,11 @@ ul li a{
     transition: 0.4s ease-in-out;
 }
 
-ul li a:hover{
+ul li a:hover {
     color: #ff7200;
 }
 
+/* BACKGROUND */
 body {
     min-height: 100vh;
     background: linear-gradient(to top, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%),
@@ -76,6 +76,7 @@ body {
     align-items: center;
 }
 
+/* FORM CONTAINER */
 .change-password-container {
     background: black;
     color: white;
@@ -83,15 +84,14 @@ body {
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     width: 500px;
-    height: 450px;
+    height: auto;
     border: 2px solid gray;
     position: absolute;
-    top: 120px;    
-    right: 400px;   
+    top: 120px;
+    right: 400px;
 }
 
 .change-password-container h2 {
-    padding-bottom: 10px;
     text-transform: uppercase;
     color: #ff7200;
     text-align: center;
@@ -111,7 +111,6 @@ body {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    box-sizing: border-box;
     background: transparent;
     border: none;
     border-bottom: 1px solid #ff7200;
@@ -132,7 +131,6 @@ input:-webkit-autofill {
     padding: 10px;
     border-radius: 50px;
     font-size: 16px;
-    box-sizing: border-box;
     letter-spacing: 5px;
 }
 
@@ -149,6 +147,7 @@ input:-webkit-autofill {
     color: red;
 }
 
+/* FOOTER */
 #footer {
     background: #222;
     color: #fff;
@@ -164,4 +163,72 @@ input:-webkit-autofill {
 #footer a {
     color: #ff7200;
     text-decoration: none;
+}
+
+/* ========================================
+   MOBILE RESPONSIVE DESIGN
+   ======================================== */
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px 20px;
+    }
+
+    .logo {
+        font-size: 24px;
+        padding-left: 0;
+    }
+
+    .menu {
+        width: 100%;
+        height: auto;
+    }
+
+    .menu ul {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .menu ul li {
+        margin-left: 0;
+    }
+
+    .change-password-container {
+        width: 90%;
+        top: 100px;
+        left: 5%;
+        right: 5%;
+        padding: 20px;
+        position: static;
+        margin: 20px auto;
+    }
+
+    .submit-btn {
+        font-size: 14px;
+        padding: 12px;
+        letter-spacing: 2px;
+    }
+
+    #footer {
+        position: relative;
+        padding: 20px 10px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .logo {
+        font-size: 20px;
+    }
+
+    .change-password-container {
+        padding: 15px;
+    }
+
+    .submit-btn {
+        font-size: 12px;
+    }
 }
