--- a/login.css
+++ b/login.css
@@ -281,3 +281,81 @@ ul li a:hover{
     color: #ff7200;
     text-decoration: none;
 }
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .icon {
+        width: 100%;
+        height: auto;
+    }
+
+    .logo {
+        font-size: 24px;
+        padding-left: 0;
+        padding-top: 0;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .menu {
+        width: 100%;
+        float: none;
+        height: auto;
+        margin-top: 10px;
+    }
+
+    .menu ul {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .menu ul li {
+        margin-left: 10px;
+    }
+
+    .content {
+        width: 100%;
+        margin-left: 0;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .content h1 {
+        font-size: 28px;
+        padding-left: 0;
+        margin-top: 20px;
+    }
+
+    .content .par {
+        text-align: center;
+        padding-left: 0;
+        line-height: 1.5;
+    }
+
+    .form {
+        position: static;
+        width: 90%;
+        max-width: 360px;
+        margin: 20px auto;
+        transform: none;
+    }
+
+    .form input {
+        width: 100%;
+    }
+
+    .btnn {
+        width: 100%;
+    }
+
+    #footer {
+        font-size: 14px;
+        padding: 8px 0;
+    }
+}
