--- a/staff_home.css
+++ b/staff_home.css
@@ -65,24 +65,32 @@ nav a {
 }
 
 /**********MENU SECTION**********/
-
 nav {
-	float: right;
-	padding: 35px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 32px; 
+    padding: 20px 0px;
 }
 
 nav a {
-	color: black;
-	text-decoration: none;
-	font-size: 18px;
-	padding: 2px 10px;
-	font-weight: 500;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 2px 10px;
+    font-weight: 500;
 }
-nav a:hover {
-    background-color: #c0132a;
-    color: white;
-    border-radius: 5px;
+
+.user-icon {
+    position: static; 
+    width: 48px;
+    height: 40px;
+    border-radius: 50%;
+    z-index: 10;
+    margin-left: 16px; 
+    
 }
+
 
 .main {
     background-color: #f0f3fa;
@@ -92,11 +100,12 @@ nav a:hover {
     width: 100%;
 }
 
+
 h1 {
     color: #0a0a0a;
     margin-top: 60px;
     align-items: center;
-    margin-left: 450px;
+    margin-left: 250px;
 }
 
 p {
@@ -197,4 +206,79 @@ button:hover {
 #footer a {
     color: #ff7200;
     text-decoration: none;
+}
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .header marquee {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .container .logo {
+    height: 50px;
+    width: 50px;
+    margin-top: 10px;
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0;
+  }
+
+  nav a {
+    font-size: 16px;
+    padding: 5px;
+  }
+
+  .user-icon {
+    width: 36px;
+    height: 36px;
+    margin-left: 0;
+  }
+
+  h1 {
+    font-size: 20px;
+    margin: 20px 0 10px 0;
+  }
+
+  p {
+    font-size: 14px;
+    padding: 0 10px;
+  }
+
+  .button1,
+  button {
+    padding: 10px 20px;
+    font-size: 14px;
+    margin: 10px 5px;
+  }
+
+  .event {
+    width: 90%;
+    font-size: 14px;
+  }
+
+  .event .heading {
+    font-size: 18px;
+  }
+
+  .event ul li {
+    font-size: 14px;
+  }
+
+  #footer {
+    padding: 12px 5px;
+    font-size: 14px;
+  }
+
+  #footer p {
+    font-size: 14px;
+  }
 }
