--- a/student_home.css
+++ b/student_home.css
@@ -1,171 +1,197 @@
 * {
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-
-
-html,
 body {
-	font-family:roboto,sans-serif, arial;
-	font-size: 16px;
-	color: #242424;
+  background: #ffffff;
+  font-family: Arial, sans-serif;
+  text-align: center;
 }
 
-/*.container {
-	width: 1400px;
-	margin: 0px auto;
-}*/
-
-/****************HEADER SECTION****************/
+/* Header */
 .header {
-	background: #000;
-	padding: 10px;
-	
-	
-}
-
-.header b {
-	background: #fff;
-	color: red;
-	padding: 10px;
-	font-size: 20px;
+  background: #000;
+  padding: 10px;
 }
 
 .header marquee {
-	font-size: 20px;
-	color: #fff;
-	width: 100%;
+  font-size: 20px;
+  color: #fff;
+  width: 100%;
 }
 
+/* Logo and Navigation */
+.container {
+  position: relative;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  padding: 10px;
+}
 
-/**********LOGO SECTION**********/
 .logo {
-	height: 65px;
-	margin-top: 8px;
-	margin-left: 35px;
-	
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 70px;
+    width: 70px;
+    margin: 0;
+    padding: 0;
 }
 
-/**********MENU SECTION**********/
+/* Navigation */
 nav {
-	float: right;
-	padding: 35px 0px;
-
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 32px;
+  padding: 20px 0px;
 }
 
 nav a {
-	color: black;
-	text-decoration: none;
-	font-size: 18px;
-	padding: 2px 10px;
-	font-weight: 500;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 2px 10px;
+  font-weight: 500;
 }
 
-nav a:hover {
-    background-color: #c0132a;
-    color: white;
-    border-radius: 5px;
+.user-icon {
+  width: 48px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: 16px;
 }
 
-
-/****************EVENT SECTION*************/
+/* Main Section */
 .main-section {
-	width: 100%;
-	float: left;
-	padding: 60px 0px 60px 60px;
+  background-color: #f0f3fa;
+  padding: 60px 0;
 }
 
 .event1 {
-	width: 92%;
-	margin-left: 1%;
-	float: center;
-	background-color: #1ccdf1;
-	height: 530px;
-	
-}
-
-.event1 i {
-	color: rgb(180, 16, 14);
-	font-size: 16px;
-}
-
-.event1 div {
-	padding: 10px;
+  width: 75%;
+  margin: auto;
+  background-color: #1ccdf1;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .event1 .heading {
-	padding: 10px;
-	color: #fff;
-	background: black;
-	text-align: center;
-	font-size: 22px;
-	font-weight: 400;
-	margin-bottom: 10px;
+  padding: 10px;
+  color: #fff;
+  background: black;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.event1 i {
+  color: rgb(180, 16, 14);
+  font-size: 14px;
 }
 
 .event1 ul li {
-	margin-bottom: 20px;
-	width: 100%;
-	float: left;
-	list-style: none;
+  margin-bottom: 20px;
+  list-style: none;
+  text-align: left;
 }
 
-.event {
-	width: 32%;
-	margin-right: 1%;
-	float: left;
-	background-color: #1ccdf1;
-}
-
-.event i {
-	color: red;
-	font-size: 14px;
-}
-
-.event div {
-	padding: 10px;
-}
-
-.event .heading {
-	padding: 10px;
-	color: #fff;
-	background: black;
-	text-align: center;
-	font-size: 22px;
-	font-weight: 400;
-	margin-bottom: 10px;
-}
-
-.event ul li {
-	margin-bottom: 20px;
-	width: 100%;
-	float: left;
-	list-style: none;
-}
-
-
-
-
-
-
-
-
-/****************FOOTER SECTION****************/
+/* Footer */
 #footer {
-    background: #222;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    clear: both;
+  background: #222;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  width: 100%;
+  clear: both;
+}
+
+#footer p {
+  font-size: 16px;
 }
 
 #footer a {
-    color: #ff7200;
-    text-decoration: none;
+  color: #ff7200;
+  text-decoration: none;
 }
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .header marquee {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .container .logo {
+    height: 50px;
+    width: 50px;
+    margin-top: 10px;
+  }
+
+  nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0;
+  }
+
+  nav a {
+    font-size: 16px;
+    padding: 5px;
+  }
+
+  .user-icon {
+    width: 36px;
+    height: 36px;
+    margin-left: 0;
+  }
+
+  h1 {
+    font-size: 20px;
+    margin: 20px 0 10px 0;
+  }
+
+  p {
+    font-size: 14px;
+    padding: 0 10px;
+  }
+
+  .button1,
+  button {
+    padding: 10px 20px;
+    font-size: 14px;
+    margin: 10px 5px;
+  }
+
+  .event {
+    width: 90%;
+    font-size: 14px;
+  }
+
+  .event .heading {
+    font-size: 18px;
+  }
+
+  .event ul li {
+    font-size: 14px;
+  }
+
+  #footer {
+    padding: 12px 5px;
+    font-size: 14px;
+  }
+
+  #footer p {
+    font-size: 14px;
+  }
+}
+
